@@ -1,8 +1,12 @@
 package no.nav.sbl.dialogarena.common.cxf;
 
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
+
+import javax.servlet.ServletContext;
+import javax.xml.ws.handler.MessageContext;
 
 import org.apache.cxf.interceptor.Fault;
 import org.apache.cxf.message.Message;
@@ -26,12 +30,16 @@ public class AttachApiKeyOutInterceptor extends AbstractPhaseInterceptor<Message
     @Override
     public void handleMessage(Message message) throws Fault {
        
-         Map<String,List> headers =(Map<String, List>) message.get(Message.PROTOCOL_HEADERS);
-         headers.put(API_KEY_HEADER, List.of(apiKeyValue));
+      //   Map<String,List> headers =(Map<String, List>) message.get(Message.PROTOCOL_HEADERS);
+         
+         
+     
+         
+       //  headers.put(API_KEY_HEADER, Arrays.asList(apiKeyValue));
          
          String userName = System.getProperty("systemuser.sendsoknad.username");
          String password = System.getProperty("systemuser.sendsoknad.password");
-         headers.put("Authorization", List.of("Basic "+ encodeAsBase64(userName+":"+password)));
+     //    headers.put("Authorization", List.of("Basic "+ encodeAsBase64(userName+":"+password)));
     }
     
     
